--- a/Battleships/CMakeLists.txt
+++ b/Battleships/CMakeLists.txt
@@ -4,8 +4,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(SFML 2.5 COMPONENTS graphics audio window system REQUIRED)
 
-add_executable(battleships main.cpp src/menu.cpp menu.h src/game.cpp game.h settings.h
-        customText.h src/customText.cpp constants.h src/cell.cpp cell.h src/ship.cpp ship.h src/player.cpp player.h src/field.cpp field.h UI.h graphicUI.h consoleUI.h shipBuilder.cpp shipBuilder.h)
+add_executable(battleships main.cpp src/menu.cpp include/menu.h src/game.cpp include/game.h include/settings.h
+        include/customText.h src/customText.cpp include/constants.h src/cell.cpp include/cell.h src/ship.cpp include/ship.h src/player.cpp include/player.h src/field.cpp include/field.h include/UI.h include/graphicUI.h include/consoleUI.h )
 
 target_link_libraries(battleships sfml-graphics sfml-audio sfml-window sfml-system X11)
 set(CMAKE_THREAD_LIBS_INIT "-lpthread")
